Fixing the gaps

--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -1,7 +1,7 @@
 .dashboard {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
   padding: 2rem;
   background-color: #192525;
   color: #ffffff;
@@ -23,7 +23,7 @@
   display: grid;
   flex-direction: column;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 2.5rem;
+  gap: 2.4rem;
   width: 100%;
   margin-bottom: 1rem;
 }
